[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "pyscpi"
version = "0.5.0"
authors = [
  { name="Danial Chitnis", email="d.chitnis@ed.ac.uk" },
]
description = "A Python library for communicating with SCPI devices and a helper library for communicating with the Keysight's Smart Bench Essentials"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/danchitnis/pyscpi/"
"Bug Tracker" = "https://github.com/danchitnis/pyscpi/issues"

[tool.hatch.build]
exclude = [
  "tests",
  "test/*",
  "test/**",
  ".github",
  "docs",
  "temp",
  "examples",
]